--- a/templates/homeTmpl.html
+++ b/templates/homeTmpl.html
@@ -3,7 +3,7 @@
    Info
  </h1>
   <div class="home-text">
-    Hello, my name is {{name }} and this is my application which consumes an API based using a model containing trivial information about myself. This mini-project serves as an exercise in building a REST api that can be consummed by the client. Angular.js and Node.js are used to consume and serve data across various end-points.
+    Hello, my name is {{name }}. This applications serves as a demonstration for both the construction and consumption of a RESTful API. Angular.js and Node.js are used to consume and serve data across various end-points. Any data is currently modeled in a .js file.
   </div>
   <br>
   <div class="info">
