--- a/templates/homeTmpl.html
+++ b/templates/homeTmpl.html
@@ -3,11 +3,11 @@
    Info
  </h1>
   <div class="home-text">
-    Hello, my name is {{name }}. This applications serves as a demonstration for both the construction and consumption of a RESTful API. Angular.js and Node.js are used to consume and serve data across various end-points. Any data is currently modeled in a .js file.
+    Hello, my name is {{name }}. This applications serves as a demonstration for both the construction and consumption of a RESTful API. Angular.js and Node.js are used to consume and serve data across various end-points. All data is currently modeled in a .js file. No database is present.
   </div>
   <br>
   <div class="info">
     Name: {{name}}
-    <br> Location {{location}}
+    <br> Location: {{location}}
   </div>
 </div>
